@@ -21,6 +21,7 @@ Core - General
 - Fix problem with html entitites in email addresses in user settings.
 - Fix problem with {content cssname=string} and quotes.
 - Chaged cmsms plugins to use $smarty->getTemplateVars() instead of $smarty->get_template_vars() because of scope issues.
+- Minor fix to {form_start} when not used in a module.
 
 CMSContentManager v1.0.1
 - Fixes for changing content types.
